test/e2e/fixtures/host-manual-context/queries-http.json
[
  {
    "url": "/target/cleartext",
    "method": "GET",
    "headers": {
      "Host": "localhost"
    }
  }
]
