test/e2e/fixtures/host-manual-context/queries-https.json
[
  {
    "url": "/target/tls-1.2-1.3",
    "method": "GET",
    "insecure": true,
    "minTLSv": "v1.2",
    "maxTLSv": "v1.3",
    "headers": {
      "Host": "localhost"
    }
  },
  {
    "url": "/target/tls-1.0-1.0",
    "method": "GET",
    "insecure": true,
    "minTLSv": "v1.0",
    "maxTLSv": "v1.0",
    "headers": {
      "Host": "localhost"
    }
  },
  {
    "url": "/target/tls-1.3-1.3",
    "method": "GET",
    "insecure": true,
    "minTLSv": "v1.3",
    "maxTLSv": "v1.3",
    "headers": {
      "Host": "localhost"
    }
  }
]
